refact: update index file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alura Newsletter</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -30,7 +31,7 @@
 
     <main class="">
 
-        <section class="bg-azul-escuro hidden">
+        <section class="bg-azul-escuro">
             <img class="" src="image/icone-mergulhador.svg" alt="icone de mergulhador">
         </section>
 
