feat: install and configure tailwind css

--- a/index.html
+++ b/index.html
@@ -6,25 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alura Newsletter</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        azul: {
-                            claro: '#C5DFFF',
-                            escuro: '#061E3C',
-                            hover: '#1057B0'
-                        },
-                    },
-                    fontFamily: {
-                        inter: ['Inter', 'sans-serif']    
-                    }
-                }
-            }
-        }
-    </script>
+    <link href="/dist/output.css" rel="stylesheet">
 </head>
 
 <body class="bg-azul-claro font-inter">
@@ -52,7 +34,7 @@
             </div>
 
             <div class="">
-                <h1 class="">Alura Newsletter</h1>
+                <h1 class="bg-azul-escuro">Alura Newsletter</h1>
                 <p class="">Mergulhe em uma plataforma que respira tecnologia!</p>
             </div>
 
