refact: update tailwind configuration based in documentation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main class="">
 
-        <section class="bg-azul-escuro">
+        <section class="bg-azul-escuro hidden">
             <img class="" src="image/icone-mergulhador.svg" alt="icone de mergulhador">
         </section>
 
@@ -34,7 +34,7 @@
             </div>
 
             <div class="">
-                <h1 class="bg-azul-escuro">Alura Newsletter</h1>
+                <h1 class="">Alura Newsletter</h1>
                 <p class="">Mergulhe em uma plataforma que respira tecnologia!</p>
             </div>
 
