feat: centralizes components with display-flex

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link href="/dist/output.css" rel="stylesheet">
 </head>
 
-<body class="bg-azul-claro font-inter">
+<body class="bg-azul-claro font-inter flex justify-center items-center h-screen">
 
-    <main class="">
+    <main class="flex">
 
         <section class="bg-azul-escuro hidden">
             <img class="" src="image/icone-mergulhador.svg" alt="icone de mergulhador">
