--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body class="bg-azul-claro font-inter flex justify-center items-center h-screen">
 
-    <main class="flex">
+    <main class="flex px-6">
 
         <section class="bg-azul-escuro hidden">
             <img class="" src="image/icone-mergulhador.svg" alt="icone de mergulhador">
         </section>
 
-        <section class="bg-white">
+        <section class="bg-white p-10 flex flex-col gap-6">
 
             <div class="">
                 <svg class=""
@@ -34,14 +34,14 @@
             </div>
 
             <div class="text-center">
-                <h1 class="text-4xl">Alura Newsletter</h1>
-                <p class="text-xl text-gray-700">Mergulhe em uma plataforma que respira tecnologia!</p>
+                <h1 class="text-4xl mb-1">Alura Newsletter</h1>
+                <p class="text-xl text-gray-700 mb-1">Mergulhe em uma plataforma que respira tecnologia!</p>
             </div>
 
             <form>
-                <label class="text-sm font-bold text-gray-700" for="email">Email</label>
-                <input class="text-sm" id="email" type="email" placeholder="Digite seu endereço de email">                    
-                <button class="font-bold bg-azul-escuro text-white" type="button">Inscreva-se</button>
+                <label class="text-sm font-bold text-gray-700 mb-1" for="email">Email</label>
+                <input class="text-sm w-full mb-4 pl-3" id="email" type="email" placeholder="Digite seu endereço de email">                    
+                <button class="font-bold bg-azul-escuro text-white w-full py-2" type="button">Inscreva-se</button>
             </form>
         </section>
     </main>
