--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body class="bg-azul-claro font-inter flex justify-center items-center h-screen">
 
-    <main class="flex px-6">
+    <main class="flex px-6 drop-shadow-2xl">
 
         <section class="bg-azul-escuro hidden">
             <img class="" src="image/icone-mergulhador.svg" alt="icone de mergulhador">
         </section>
 
-        <section class="bg-white p-10 flex flex-col gap-6">
+        <section class="bg-white p-10 flex flex-col gap-6 rounded-lg">
 
             <div class="">
                 <svg class=""
@@ -40,8 +40,8 @@
 
             <form>
                 <label class="text-sm font-bold text-gray-700 mb-1" for="email">Email</label>
-                <input class="text-sm w-full mb-4 pl-3" id="email" type="email" placeholder="Digite seu endereço de email">                    
-                <button class="font-bold bg-azul-escuro text-white w-full py-2" type="button">Inscreva-se</button>
+                <input class="text-sm w-full mb-4 pl-3 py-2 rounded border shadow" id="email" type="email" placeholder="Digite seu endereço de email">                    
+                <button class="font-bold bg-azul-escuro text-white w-full py-2 rounded-full shadow-2xl" type="button">Inscreva-se</button>
             </form>
         </section>
     </main>
