--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <form>
                 <label class="text-sm font-bold text-gray-700 mb-1" for="email">Email</label>
                 <input class="text-sm w-full mb-4 pl-3 py-2 rounded border shadow focus:outline-none hover:border-azul-claro hover:ring-1 hover:ring-azul-escuro focus:border-azul-escuro focus:ring-1 focus:ring-azul-escuro" id="email" type="email" placeholder="Digite seu endereço de email">                    
-                <button class="font-bold bg-azul-escuro text-white w-full py-2 rounded-full shadow-2xl" type="button">Inscreva-se</button>
+                <button class="font-bold bg-azul-escuro text-white w-full py-2 rounded-full shadow-2xl hover:bg-azul-hover duration-150" type="button">Inscreva-se</button>
             </form>
         </section>
     </main>
